# LightPathExpressions

./: .clang-format  CMakeLists.txt  LICENSE-THIRD-PARTY  README.md  accum.cpp  automata.cpp  lpeparse.cpp  lpeparse.h  optautomata.h
include/LPE/: accum.h  optautomata.h
src/: accum.cpp  automata.cpp  automata.h  lpeparse.cpp  lpeparse.h  lpexp.cpp  lpexp.h  optautomata.h
tests/: accum_test.cpp  accum_test2.cpp  lpe_tests.cpp
